second commit reujectadjustments responsive design and added new content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="introduction-container">
 
         <div class="seftDescription">
-            <h2>Hendrick Johan Polanco Jimenez</h2>
+            <h1>Hendrick Johan Polanco Jimenez</h1>
             <p>
                 Hello! I'm Hendrick Polanco, a lover of
                 the modern world and web services development.
@@ -92,6 +92,14 @@
                         <img src="./assets/img/skillimg/bootstrap.png" alt="" srcset="">
                         <h3>BootStrap</h3>
                     </div>
+                    <div class="card-skills">
+                        <img src="./assets/img/skillimg/sqlite.png" alt="" srcset="">
+                        <h3>SQLite</h3>
+                    </div>
+                    <div class="card-skills">
+                        <img src="./assets/img/skillimg/nodejs.svg" alt="" srcset="">
+                        <h3>NODEJS</h3>
+                    </div>
                 
             </div>
         </div>
@@ -107,7 +115,7 @@
             <h4>Ultimate Trello</h4>
             <p>Ultimate Trello is a note app that
                  contains multiple ways to take notes,
-                  such as kanban, finance, board, or sticky notes.</p>
+                  such as kanban, finance, board, or sticky notes. developed with HTML, CSS and JS</p>
             <a href="https://joyful-meringue-4c7a00.netlify.app/">Open</a>
         </div>
         <div class="card-projects">
@@ -115,14 +123,20 @@
             <h4>Clone Website</h4>
             <p>The clone website is a clone of the dashboard
                  of the college I attend during graduation
-                  season.</p>
+                  season. developed with HTML, CSS, JS</p>
             <a href="https://luxury-sorbet-ef3c3a.netlify.app/">Open</a>
         </div>
         <div class="card-projects">
             <img src="./assets/img/project-img/weatherApp.jpg" alt="" srcset="">
             <h4>Weather App</h4>
-            <p>This weather app can help you find the weather where you need to know what it feels like.</p>
+            <p>This is a weather app developed with HTML, CSS, JS and API Rest</p>
             <a href="https://brilliant-blancmange-32985a.netlify.app/">Open</a>
+        </div>
+        <div class="card-projects">
+            <img src="/assets/img/project-img/chatbot.com.jpg" alt="" srcset="">
+            <h4>chatbot</h4>
+            <p>This is chatbot with OpenAI, HTML, CSS, JS, NODEJS, Express and SQLite</p>
+            <a href="https://chatbot-hendrick.onrender.com/">Open</a>
         </div>
 
        </div>
@@ -144,15 +158,15 @@
     
                 <ul>
                     <li><img src="" alt="" srcset="">
-                        <a href="">Gmail: joanjimenz20@gmail.com</a>
+                        <a href="hendrickpolanco2003@gmail.com">Gmail: hendrickpolanco2003@gmail.com</a>
                     </li>
                     <li>
                         <img src="" alt="" srcset="">
-                        <a href="">Linkedin</a>
+                        <a href="www.linkedin.com/in/hendrick-polanco-aa2ab3365">Linkedin</a>
                     </li>
                     <li>
                         <img src="" alt="" srcset="">
-                        <a href="">Github</a>
+                        <a href="https://github.com/HendrickPolanco">Github</a>
                     </li>
                 </ul>
 
