update first section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="introduction-container">
 
         <div class="seftDescription">
-            <h1>Hendrick Johan Polanco Jimenez</h1>
+            <h1>Hendrick Johan Polanco Jimenez</h>
             <p>
                 Hello! I'm Hendrick Polanco, a lover of
                 the modern world and web services development.
@@ -41,7 +41,7 @@
                     
                     <ul>
                         <li>Spanish(Native)</li>
-                         <li>English(intermediate)</li>
+                         <li>English(Upper-Intermediate to Advanced level - B2/C1)</li>
                     </ul>
                 </li>
                 
